crates/check_cli/tests/snapshots/main_commands_format/indent_size_parse_errors_overflow.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse CLI arguments.
    
    Caused by:
      couldn't parse `257`: number too large to fit in target type
  


```


