crates/check_cli/tests/snapshots/main_commands_format/invalid_config_file_path.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `file.js`

```js
content
```

# Termination Message

```block
test configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Check couldn't find a configuration in the directory test.
  


```
