crates/check_cli/tests/snapshots/main_commands_format/max_diagnostics_default.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
snapshot_kind: text
---
# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
The number of diagnostics exceeds the limit allowed. Use --max-diagnostics to increase it.
Diagnostics not shown: 40.
```

```block
Checked 60 files in <TIME>. No fixes applied.
Found 60 errors.
```
