crates/check_cli/tests/snapshots/main_commands_format/no_supported_file_found.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your check.json or check.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - .
  


```

# Emitted Messages

```block
Checked 0 files in <TIME>. No fixes applied.
```
