crates/check_cli/tests/snapshots/main_commands_format/quote_properties_parse_errors_letter_case.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse CLI arguments.
    
    Caused by:
      couldn't parse `As-needed`: Value not supported for QuoteProperties
  


```


